# coach-lol-live

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
site/: i18n.js  index.html  style.css
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: desktop-shortcut.wxs
src/components/: AlertList.tsx  AudioToggle.tsx  BroadcastScoreboard.tsx  ChampionImage.tsx  Dashboard.tsx  GameHeader.tsx  ItemImage.tsx  LiveFeed.tsx  MicroOverlay.tsx  ObjectiveBar.tsx  PlayerCard.tsx  PlayerGuide.tsx  TeamPanel.tsx  UpdateBanner.tsx
src/data/: items.json
src/i18n/: index.ts
src/logic/: alertEngine.ts  directOpponent.ts  dragonSoul.ts  eventHistory.ts  goldCalc.ts  itemProgress.ts  objectiveTimer.ts  playerStats.ts
src/logic/__tests__/: alertEngine.test.ts  directOpponent.test.ts  dragonSoul.test.ts  eventHistory.test.ts  fixtures.ts  goldCalc.test.ts  itemProgress.test.ts  objectiveTimer.test.ts
src/mock/: gameState.ts
src/screens/: HomeScreen.tsx  SettingsScreen.tsx  WaitingScreen.tsx
src/services/: audioAlerts.ts  ddragon.ts  liveClient.ts  updater.ts
src/styles/: overlay.css
src/types/: alert.ts  liveClient.ts
